# railroad

ms2-card/rpi-pico/blink/: CMakeLists.txt  main.c
mswebapp/src/: CMakeLists.txt  CMakePresets.json  main.cpp  main.cpp.1
railcontrol/src/: ArgumentHandler.cpp  ArgumentHandler.h  CMakeLists.txt  CONTRIBUTORS  Config.cpp  Config.h  ControlInterface.h  DataTypes.h  Fallthrough.h  Languages.cpp  Languages.h  Makefile  Manager.cpp  Manager.h  RailControl.cpp  RailControl.h  TODO  Version.cpp  Version.h  amalgamation.bash  railcontrol.conf.dist
railcontrol/src/DataModel/: Accessory.cpp  Accessory.h  AccessoryBase.cpp  AccessoryBase.h  AccessoryConfig.h  Cluster.cpp  Cluster.h  Counter.cpp  Counter.h  DataModel.h  Feedback.cpp  Feedback.h  FeedbackConfig.h  HardwareHandle.cpp  HardwareHandle.h  Layer.h  LayoutItem.cpp  LayoutItem.h  LockableItem.cpp  LockableItem.h  Loco.cpp  Loco.h  LocoBase.cpp  LocoBase.h  LocoConfig.h  LocoFunctions.cpp  LocoFunctions.h  MultipleUnit.cpp  MultipleUnit.h  Object.cpp  Object.h  ObjectIdentifier.cpp  ObjectIdentifier.h  Relation.cpp  Relation.h  Route.cpp  Route.h  Serializable.cpp  Serializable.h  Signal.cpp  (+9 more)
railcontrol/src/Documentation/: style.css  template.html
railcontrol/src/Documentation/de/: automatic.md  config-accessories.md  config-controls.md  config-counter.md  config-feedbacks.md  config-groups.md  config-intellibox.md  config-layers.md  config-locomotives.md  config-mastercontrol.md  config-mastercontrol2.md  config-multipleunits.md  config-redbox.md  config-routes.md  config-rs232-usb.md  config-signals.md  config-switches.md  config-texts.md  config-tracks.md  config-twincenter.md  control-6051.md  control-cc-schnitte.md  control-cs2-tcp.md  control-cs2-udp.md  control-hsi88.md  control-opendcc-z1.md  control-z21.md  general-settings.md  index.md  metadata.yaml  startup-arguments.md
railcontrol/src/Documentation/en/: automatic.md  config-accessories.md  config-controls.md  config-counter.md  config-feedbacks.md  config-groups.md  config-intellibox.md  config-layers.md  config-locomotives.md  config-mastercontrol.md  config-mastercontrol2.md  config-multipleunits.md  config-redbox.md  config-routes.md  config-rs232-usb.md  config-signals.md  config-switches.md  config-texts.md  config-tracks.md  config-twincenter.md  control-6051.md  control-cc-schnitte.md  control-cs2-tcp.md  control-cs2-udp.md  control-hsi88.md  control-opendcc-z1.md  control-z21.md  general-settings.md  index.md  metadata.yaml  startup-arguments.md
railcontrol/src/Documentation/es/: automatic.md  config-accessories.md  config-controls.md  config-counter.md  config-feedbacks.md  config-groups.md  config-intellibox.md  config-layers.md  config-locomotives.md  config-mastercontrol.md  config-mastercontrol2.md  config-multipleunits.md  config-redbox.md  config-routes.md  config-rs232-usb.md  config-signals.md  config-switches.md  config-texts.md  config-tracks.md  config-twincenter.md  control-6051.md  control-cc-schnitte.md  control-cs2-tcp.md  control-cs2-udp.md  control-hsi88.md  control-opendcc-z1.md  control-z21.md  general-settings.md  index.md  metadata.yaml  startup-arguments.md
railcontrol/src/Hardware/: AccessoryCache.cpp  AccessoryCache.h  CS1.h  CS2Tcp.cpp  CS2Tcp.h  CS2Udp.cpp  CS2Udp.h  Capabilities.h  CcSchnitte.cpp  CcSchnitte.h  DR5000.h  DccPpExSerial.cpp  DccPpExSerial.h  DccPpExTcp.cpp  DccPpExTcp.h  Ecos.h  FeedbackCache.cpp  FeedbackCache.h  HardwareHandler.cpp  HardwareHandler.h  HardwareInterface.h  HardwareParams.h  Hsi88.cpp  Hsi88.h  Intellibox.h  Intellibox2.h  LocoCache.cpp  LocoCache.h  LocoNetAdapter63120.h  LocoNetAdapter63820.h  M6051.cpp  M6051.h  MasterControl.h  MasterControl2.h  OpenDcc.h  RedBox.h  Rektor.h  SystemControl7.h  TwinCenter.h  Virtual.cpp  (+4 more)
railcontrol/src/Hardware/Protocols/: DccPpEx.cpp  DccPpEx.h  DccPpExLocoCache.h  EsuCAN.cpp  EsuCAN.h  LocoNet.cpp  LocoNet.h  LocoNetLocoCache.h  MaerklinCAN.cpp  MaerklinCAN.h  MaerklinCANCommon.cpp  MaerklinCANCommon.h  P50x.cpp  P50x.h  P50xCache.h  P50xEthernet.h  P50xSerial.h  P50xUhlenbrock.h  Z21.cpp  Z21.h  Z21DataTypes.h  Z21FeedbackCache.h  Z21LocoCache.h  Z21TurnoutCache.h
railcontrol/src/Hardware/zlib/: README  gzguts.h  infback.c  inflate.c  zutil.h
railcontrol/src/Logger/: Logger.cpp  Logger.h  LoggerClient.h  LoggerClientConsole.h  LoggerClientFile.h  LoggerClientTcp.h  LoggerServer.cpp  LoggerServer.h
railcontrol/src/Network/: Select.h  Serial.cpp  Serial.h  TcpClient.cpp  TcpClient.h  TcpConnection.cpp  TcpConnection.h  TcpServer.cpp  TcpServer.h  UdpClient.h  UdpConnection.cpp  UdpConnection.h  UdpServer.cpp  UdpServer.h
railcontrol/src/Server/CS2/: CS2Client.cpp  CS2Client.h  (+2 more)
railcontrol/src/Storage/: Sqlite.cpp  Sqlite.h  StorageHandler.cpp  StorageHandler.h  StorageInterface.h  StorageParams.h  TransactionGuard.cpp  TransactionGuard.h
railcontrol/src/Utils/: Integer.cpp  Integer.h  Network.cpp  Network.h  ThreadSafeQueue.h  Utils.cpp  Utils.h
railcontrol/src/WebServer/: HtmlTag.cpp  HtmlTag.h  HtmlTagAccessory.cpp  HtmlTagAccessory.h  HtmlTagButton.cpp  HtmlTagButton.h  HtmlTagButtonCancel.h  HtmlTagButtonCommand.cpp  HtmlTagButtonCommand.h  HtmlTagButtonCommandFullScreen.cpp  HtmlTagButtonCommandFullScreen.h  HtmlTagButtonCommandPressRelease.cpp  HtmlTagButtonCommandPressRelease.h  HtmlTagButtonCommandToggle.cpp  HtmlTagButtonCommandToggle.h  HtmlTagButtonCommandWide.h  HtmlTagButtonMinus.h  HtmlTagButtonOK.h  HtmlTagButtonPlus.h  HtmlTagButtonPopup.cpp  HtmlTagButtonPopup.h  HtmlTagButtonPopupWide.h  HtmlTagButtonSwapRelation.h  HtmlTagFeedback.cpp  HtmlTagFeedback.h  HtmlTagInput.cpp  HtmlTagInput.h  HtmlTagInputCheckbox.h  HtmlTagInputCheckboxWithLabel.h  HtmlTagInputHidden.h  HtmlTagInputInteger.cpp  HtmlTagInputInteger.h  HtmlTagInputIntegerWithLabel.h  HtmlTagInputSlider.cpp  HtmlTagInputSlider.h  HtmlTagInputSliderLocoSpeed.cpp  HtmlTagInputSliderLocoSpeed.h  HtmlTagInputText.h  HtmlTagInputTextWithLabel.h  HtmlTagLabel.h  (+55 more)
railcontrol/src/html/: javascript.js  style.css
railcontrol/src/tests/: conftest.py  loco_test.py
(+531 files in other folders)
